--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ __pycache__
 *.docx
 nn/cocodataset/annotations/*
 !nn/cocodataset/annotations/.gitkeep
+**/saved_models/*
+!**/saved_models/.gitkeep
