--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,23 @@ albucore==0.0.23
 albumentations==2.0.4
 annotated-types==0.7.0
 argcomplete==3.5.3
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asttokens==3.0.0
 attrs==25.1.0
 Brotli==1.1.0
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+colorama==0.4.6
+comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
 dacite==1.7.0
-debugpy @ file:///D:/bld/debugpy_1737269744634/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+debugpy==1.8.12
+decorator==5.2.1
 dill==0.3.9
 dnspython==2.7.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+exceptiongroup==1.2.2
+executing==2.1.0
 fiftyone_db==1.1.7
 filelock==3.13.1
 fonttools==4.56.0
@@ -34,40 +34,41 @@ humanize==4.12.1
 hyperframe==6.1.0
 idna==3.10
 imageio==2.37.0
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+importlib_metadata==8.6.1
 inflate64==1.0.1
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/bld/rattler-build_ipython_1738421304/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+ipykernel==6.29.5
+ipython==8.32.0
+jedi==0.19.2
 Jinja2==3.1.4
 jmespath==1.0.1
 joblib==1.4.2
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 kaleido==0.2.1
 kiwisolver==1.4.8
 lazy_loader==0.4
 MarkupSafe==2.1.5
 matplotlib==3.10.0
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+matplotlib-inline==0.1.7
 mpmath==1.3.0
 multivolumefile==0.2.3
 narwhals==1.28.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+nest_asyncio==1.6.0
 networkx==3.3
 numpy==2.1.2
 opencv-python-headless==4.11.0.86
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+packaging==24.2
 pandas==2.2.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+parso==0.8.4
+pickleshare==0.7.5
 pillow==11.0.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
+pip==25.0
+platformdirs==4.3.6
 pprintpp==0.4.0
 priority==2.0.0
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
-psutil @ file:///D:/bld/psutil_1735327360263/work
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+prompt_toolkit==3.0.50
+psutil==6.1.1
+pure_eval==0.2.3
 py7zr==0.22.0
 pybcj==1.0.3
 pycocotools==2.0.8
@@ -75,15 +76,15 @@ pycryptodomex==3.21.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydash==8.0.5
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+Pygments==2.19.1
 pymongo==4.9.2
 pyparsing==3.2.1
 pyppmd==1.1.1
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dateutil==2.9.0.post0
 pytz==2025.1
 pywin32==307
 PyYAML==6.0.2
-pyzmq @ file:///D:/bld/pyzmq_1738270978316/work
+pyzmq==26.2.1
 pyzstd==0.16.2
 rarfile==4.2
 regex==2024.11.6
@@ -93,13 +94,14 @@ Rtree==1.3.0
 scikit-image==0.25.2
 scikit-learn==1.6.1
 scipy==1.15.2
+setuptools==75.8.0
 simsimd==6.2.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 sseclient-py==1.8.0
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+stack_data==0.6.3
 strawberry-graphql==0.260.2
 stringzilla==3.12.0
 sympy==1.13.1
@@ -110,15 +112,16 @@ tifffile==2025.2.18
 torch==2.6.0+cu126
 torchaudio==2.6.0+cu126
 torchvision==0.21.0+cu126
-tornado @ file:///D:/bld/tornado_1732615900055/work
+tornado==6.4.2
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2025.1
 tzlocal==5.3
 urllib3==2.3.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+wcwidth==0.2.13
+wheel==0.45.1
 wrapt==1.17.2
 wsproto==1.2.0
 xmltodict==0.14.2
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zipp==3.21.0
