--- a/requirements.txt
+++ b/requirements.txt
@@ -108,9 +108,9 @@ tabulate==0.9.0
 texttable==1.7.0
 threadpoolctl==3.5.0
 tifffile==2025.2.18
-torch==2.6.0+cu126
-torchaudio==2.6.0+cu126
-torchvision==0.21.0+cu126
+#torch==2.6.0+cu126
+#torchaudio==2.6.0+cu126
+#torchvision==0.21.0+cu126
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
