--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ nn/cocodataset/annotations/*
 !nn/cocodataset/annotations/.gitkeep
 **/saved_models/*
 !**/saved_models/.gitkeep
-checkpoint.pth.tar
-vgg16_checkpoint.pth.tar
+*checkpoint.pth.tar
+runs/
