Feat: yolo_vgg16 to single object single class detection(#2)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 .history
+.vscode
+__pycache__
 *.docx
+nn/cocodataset/annotations/*
+!nn/cocodataset/annotations/.gitkeep
+**/saved_models/*
+!**/saved_models/.gitkeep
+*checkpoint.pth.tar
+runs/
+**/video/*
+!**/video/.gitkeep
