--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ __pycache__
 *.docx
 nn/cocodataset/annotations/*
 !nn/cocodataset/annotations/.gitkeep
+nn/cocodataset/images/*
+!nn/cocodataset/images/.gitkeep
 **/saved_models/*
 !**/saved_models/.gitkeep
 *checkpoint.pth.tar
