--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .vscode
 __pycache__
 *.docx
+*.pdf
 nn/cocodataset/annotations/*
 !nn/cocodataset/annotations/.gitkeep
 nn/cocodataset/images/*
@@ -12,3 +13,5 @@ nn/cocodataset/images/*
 runs/
 **/video/*
 !**/video/.gitkeep
+nn/dotadataset/*
+!nn/dotadataset/.gitkeep
